src/objects/ints__Mileage_Adjustments__c.object
<CustomObject>
    <description>The Mileage objects are returned by Blackbook service for the purpose of manually computing the mileage adjustments for an equipment.</description>
    <fields>
        <fullName>ints__Blackbook_Result__c</fullName>
        <label>Blackbook Result</label>
        <referenceTo>ints__Blackbook_Result__c</referenceTo>
        <relationshipLabel>Equipment Mileage Adjustments</relationshipLabel>
        <relationshipName>Equipment_Mileage_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Charge_per_mile__c</fullName>
        <label>Charge per mile</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__end_mile_per_year__c</fullName>
        <label>Ending mileage per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__start_mile_per_year__c</fullName>
        <label>Beginning mileage per year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__start_month__c</fullName>
        <description>Month of year to use to calculate the age of the vehicle.</description>
        <label>Month of year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Equipment Mileage Adjustment</label>
    <nameField>
        <displayFormat>EMA-{0000000000}</displayFormat>
        <label>Mileage Adjustments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Mileage Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>